...
                        .contextMenu {
                            Button(role: .destructive) {
                                viewModel.deletePhoto(at: path, context: viewContext)
                                
                                presentToast(ToastValue(message: "Receipt/Invoice deleted!"))
                            } label: {
                                Label("Delete", systemImage: "trash")
                            }
                        }
                }
            }
            .padding()
        }
...
